--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>
       Rizal disini, sedang belajar deployment dengan docker ke VPS di rumahnya.
       Nanti ini bisa diakses lewat
-      <a href="belajar-deployment.rizalanggoro.space"
+      <a href="/belajar-deployment.rizalanggoro.space"
         >belajar-deployment.rizalanggoro.space</a
       >.
     </p>
