--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         >belajar-deployment.rizalanggoro.space</a
       >.
     </p>
-    <p>Ini update kedua!!</p>
+    <p>
+      Ini update kedua!! Ini update terbaru setelah ubah poolnya menjadi 1-min,
+      apakah bisa?
+    </p>
   </body>
 </html>
