--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
       Ini update kedua!! Ini update terbaru setelah ubah poolnya menjadi 1-min,
       apakah bisa?
     </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quidem
+      aut modi eveniet vel. Nobis doloremque architecto ipsum quia explicabo,
+      sunt repellat nihil facere numquam optio nisi quo veniam consectetur.
+    </p>
   </body>
 </html>
