Add additional paragraph to index.html for content enhancement

--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
         >belajar-deployment.rizalanggoro.space</a
       >.
     </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, quae ex
+      inventore eius quia quo sint. Exercitationem corrupti quam sunt placeat
+      aliquam at! Voluptas sed dolore consectetur dolorem minus dicta?
+    </p>
   </body>
 </html>
